--- a/index.html
+++ b/index.html
@@ -7,46 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1>portfolio</h1>
         <nav>
-            <ul>
-                <li>About me</li>
-                <li>Portfolio</li>
-                <li>Resume</li>
-                <li>Contact information</li>
-
-            </ul>
+            <div class="flex-header">
+                <ul class="child2">
+                    <li><a href="#About-me">About me </a></li>
+                    <li><a href="#My-projects">My projects</a></li>
+                    <li><a href="#resume">My resume</a></li>
+                    <li><a href="#Contact-details">Contact details</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
-        <article>
+        <article class="flex-hero">
+            <div class="child1">
+                <p>hello, I am </p>
+                <h2>MARC HUDSON</h2>
+                <p></p>
+            </div>
+            <img src="/assets/profilepic.png" alt="">
+            </div>
 
-            <h2>about me</h2>
-            <p>info about me</p>
-            <img src="" alt="">
+        </article>
+        <article>
+            <div>
+                <h3 id="About-me"></h3>
+                <p>info about me</p>
+            </div>
+            <h3 id="My-projects">My projects</h3>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
 
         </article>
         <article>
 
-            <h3>My projects</h3>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-
-        </article>
-        <article>
-
-            <h4>resume</h4>
+            <h4 id="resume">resume</h4>
 
         </article>
         <footer>
             <article>
-                <h4>Contact details :</h4>
+                <h4 id="Contact-details">Contact details :</h4>
                 <ul>
                     <li>github</li>
                     <li>Email</li>
