further changes to css styling and html

--- a/index.html
+++ b/index.html
@@ -31,22 +31,31 @@
             <div class="child1">
                 <p>hello, I am </p>
                 <h2>MARC HUDSON</h2>
-                <p></p>
             </div>
             <img src="/assets/profilepic.png" alt="">
             </div>
 
         </article>
-        <article>
-            <div>
-                <h3 id="About-me"></h3>
-                <p>info about me</p>
+        <article class="flex-about-me">
+
+
+            <h3 id="About-me"> About me</h3>
+            <p>just like there is more than one way to skin a cat (or so they say), there is more than one way to write an essay. One is not required to produce a perfectly formatted five-paragraph essay every time one composes a piece of writing. There is another type of essay you can write that may just be simpler than the traditional style: the three-paragraph essay. This type of essay might be beneficial for beginning writers as it offers the organizational structure of a longer essay without requiring the length. It also offers a challenge to more advanced writers to condense their points.
+
+                The Parts of the Essay and Its Benefits
+                As with most essays, the three-paragraph essay has three parts: an introduction, a body, and a conclusion. Yet with this type of essay–unlike its five-paragraph counterpart–each one of these sections has only one paragraph. The three-paragraph essay, therefore, might be ideal for young writers or those who are currently mastering the English language.</p>
+        </article>
+
+        <article class="flex-artical">
+            <h3 id="My-projects">My projects :</h3>
+            <div class="projects-container">
+                <div class="featured"><img src="https://via.placeholder.com/350x150" alt=""></div>
+                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
+                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
+                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
+                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
             </div>
-            <h3 id="My-projects">My projects</h3>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        </article>
 
         </article>
         <article>
