grid added a css styling added

--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
 
 <body>
     <header>
-        <h1>portfolio</h1>
+
+        
+        <div>
+            <h1>portfolio</h1>
+        </div>
         <nav>
-            <div class="flex-header">
-                <ul class="child2">
-                    <li><a href="#About-me">About me </a></li>
-                    <li><a href="#My-projects">My projects</a></li>
-                    <li><a href="#resume">My resume</a></li>
-                    <li><a href="#Contact-details">Contact details</a></li>
-                </ul>
-            </div>
+
+            <ul>
+                <li><a href="#About-me">About me</a></li>
+                <li><a href="#My-projects">My projects</a></li>
+                <li><a href="#C-V">My C.V</a></li>
+                <li><a href="#Contact-details">Contact details</a></li>
+            </ul>
+
         </nav>
     </header>
     <main>
         <article class="flex-hero">
             <div class="child1">
                 <p>hello, I am </p>
-                <h2>MARC HUDSON</h2>
+                <h2>marc hudson</h2>
             </div>
             <img src="/assets/profilepic.png" alt="">
             </div>
@@ -40,32 +44,40 @@
 
 
             <h3 id="About-me"> About me</h3>
-            <p>just like there is more than one way to skin a cat (or so they say), there is more than one way to write an essay. One is not required to produce a perfectly formatted five-paragraph essay every time one composes a piece of writing. There is another type of essay you can write that may just be simpler than the traditional style: the three-paragraph essay. This type of essay might be beneficial for beginning writers as it offers the organizational structure of a longer essay without requiring the length. It also offers a challenge to more advanced writers to condense their points.
+            <p>just like there is more than one way to skin a cat (or so they say), there is more than one way to write
+                an essay. One is not required to produce a perfectly formatted five-paragraph essay every time one
+                composes a piece of writing. There is another type of essay you can write that may just be simpler than
+                the traditional style: the three-paragraph essay. This type of essay might be beneficial for beginning
+                writers as it offers the organizational structure of a longer essay without requiring the length. It
+                also offers a challenge to more advanced writers to condense their points.
 
                 The Parts of the Essay and Its Benefits
-                As with most essays, the three-paragraph essay has three parts: an introduction, a body, and a conclusion. Yet with this type of essay–unlike its five-paragraph counterpart–each one of these sections has only one paragraph. The three-paragraph essay, therefore, might be ideal for young writers or those who are currently mastering the English language.</p>
+                As with most essays, the three-paragraph essay has three parts: an introduction, a body, and a
+                conclusion. Yet with this type of essay–unlike its five-paragraph counterpart–each one of these sections
+                has only one paragraph. The three-paragraph essay, therefore, might be ideal for young writers or those
+                who are currently mastering the English language.</p>
         </article>
 
-        <article class="flex-artical">
+        <article>
             <h3 id="My-projects">My projects :</h3>
-            <div class="projects-container">
-                <div class="featured"><img src="https://via.placeholder.com/350x150" alt=""></div>
-                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
-                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
-                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
-                <div><img src="https://via.placeholder.com/350x150" alt=""></div>
+            <div class="grid-container">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
             </div>
         </article>
 
         </article>
         <article>
 
-            <h4 id="resume">resume</h4>
+            <h4 id="C-V"><a href="/assets/marc-hudson-cv.pdf">Download my cv</a></h4>
 
         </article>
         <footer>
-            <article>
-                <h4 id="Contact-details">Contact details :</h4>
+            <article class="flex-footer">
+                <h5 id="Contact-details">Contact details :</h5>
                 <ul>
                     <li>github</li>
                     <li>Email</li>
