--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
 
-        
+
         <div>
             <h1>portfolio</h1>
         </div>
@@ -79,9 +79,8 @@
             <article class="flex-footer">
                 <h5 id="Contact-details">Contact details :</h5>
                 <ul>
-                    <li>github</li>
-                    <li>Email</li>
-                    <li>Phone number: 07578902535</li>
+                    <li><a href="https://github.com/marcahudson26">github</a></li>
+                    <li><a href="mailto:marchudson2601@gmail.com"> email</a></li>
 
                 </ul>
             </article>
