changes to hero and styling css

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
         </nav>
     </header>
     <main>
-        <article class="flex-hero">
-            <div class="child1">
-                <p>hello, I am </p>
-                <h2>marc hudson</h2>
-            </div>
-            <img src="/assets/profilepic.png" alt="">
-            </div>
+        <section class="hero">
 
-        </article>
+            <h2>
+                <span class="subtext">hello, I am</span> <span class="name">marc hudson</span>
+            </h2>
+
+
+
+
+        </section>
         <article class="flex-about-me">
 
 
