added typewriter  animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Roboto+Mono:wght@500&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <section class="hero">
 
             <h2>
-                <span class="subtext">hello, I am</span> <span class="name">marc hudson</span>
+                <span class="subtext">hello, I am</span> <span class="name typewriter">Marc Hudson</span>
             </h2>
 
 
