added links to projects change to typewriter speed

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Marc Hudson Portfolio</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Roboto+Mono:wght@500&family=Satisfy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Roboto+Mono:wght@500&family=Satisfy&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
 
 
         <div>
-            <h1>portfolio</h1>
+            <h1>Portfolio</h1>
         </div>
         <nav>
 
@@ -34,12 +36,8 @@
         <section class="hero">
 
             <h2>
-                <span class="subtext">hello, I am</span> <span class="name typewriter">Marc Hudson</span>
+                <span class="subtext">Hello, I am</span> <span class="name typewriter">Marc Hudson</span>
             </h2>
-
-
-
-
         </section>
         <article class="flex-about-me">
 
@@ -62,11 +60,11 @@
         <article>
             <h3 id="My-projects">My projects :</h3>
             <div class="grid-container">
-                <div class="img1"></div>
-                <div class="img2"></div>
-                <div class="img3"></div>
-                <div class="img4"></div>
-                <div class="img5"></div>
+                <a class="img1" href=https://meal-planner-navy.vercel.app></a>
+                <a class="img2" href="https://strudel-alpha.vercel.app/"></a>
+                <a class="img3" href="https://marcahudson26.github.io/curly-barnacle-refact/"></a>
+                <a class="img4" href="">Coming soon</a>
+                <a class="img5" href="">Coming soon</a>
             </div>
         </article>
 
