--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Marc Hudson Portfolio</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -60,18 +60,18 @@
         <article>
             <h3 id="My-projects">My projects :</h3>
             <div class="grid-container">
-                <a class="img1" href=https://meal-planner-navy.vercel.app></a>
-                <a class="img2" href="https://strudel-alpha.vercel.app/"></a>
-                <a class="img3" href="https://marcahudson26.github.io/curly-barnacle-refact/"></a>
-                <a class="img4" href="">Coming soon</a>
-                <a class="img5" href="">Coming soon</a>
+                <a class="img1" href="https://meal-planner-navy.vercel.app"><span>Meal Planner (WIP)</span></a>
+                <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/"><span>Refactor Websites</span></a>
+                <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/"><span>Portfolio V1</span></a>
+                <a class="img4" href="https://github.com/marcahudson26"></a>
+                <a class="img5" href="https://github.com/marcahudson26"></a>
             </div>
         </article>
 
         </article>
         <article>
 
-            <h4 id="C-V"><a href="/assets/marc-hudson-cv.pdf">Download my cv</a></h4>
+            <h4 id="C-V"><a href="./assets/marc-hudson-cv.pdf">Download my cv</a></h4>
 
         </article>
         <footer>
