--- a/index.html
+++ b/index.html
@@ -43,18 +43,11 @@
 
 
             <h3 id="About-me"> About me</h3>
-            <p>just like there is more than one way to skin a cat (or so they say), there is more than one way to write
-                an essay. One is not required to produce a perfectly formatted five-paragraph essay every time one
-                composes a piece of writing. There is another type of essay you can write that may just be simpler than
-                the traditional style: the three-paragraph essay. This type of essay might be beneficial for beginning
-                writers as it offers the organizational structure of a longer essay without requiring the length. It
-                also offers a challenge to more advanced writers to condense their points.
-
-                The Parts of the Essay and Its Benefits
-                As with most essays, the three-paragraph essay has three parts: an introduction, a body, and a
-                conclusion. Yet with this type of essay–unlike its five-paragraph counterpart–each one of these sections
-                has only one paragraph. The three-paragraph essay, therefore, might be ideal for young writers or those
-                who are currently mastering the English language.</p>
+            <p>Hi im marc up until recently i was a hgv and only recently discovered my love for coding i started my journey to become a front end web developer in october 2022, it has been a rollercoaster and i have learned so much in this time, I decided to pursue my interest in programming with help of family members who are software engineers.
+                Throughout this experience so far i have taken a keen eye for detail. Im currency enrolled in a skills bootcamp into front end web development.I'm fairly new to programming but spend as much of my free time researching JavaScript and HTML/CSS.
+                I really like using css to style pages and make them user friendly im constantly learning new techniques to improve my work, im my projects below you can see my portfolio vol 1 which i look at to just remind me how far i have come in this short time.
+                My ambition is to eventually become a lead  front end engineer,  it will take a lot of time but i will not stop putting the effort and time until i reach my dream, I also have pet projects to experiment with, and pair-programme to try understand how best to work in a team of developers - and gain insight into good programming practices. Being naturally self-motivated, I am constantly setting myself goals - I believe that if a job is worth doing it's worth doing well. I am punctual, hardworking and see every job that I do, through to the end. Having worked in the armed forced, I am disciplined, follow instructions to a tee, and understand the importance of team work. I hope to eventually solve real-world problems using technology, and finally kick-start a career in tech.
+                </p>
         </article>
 
         <article>
@@ -63,8 +56,8 @@
                 <a class="img1" href="https://meal-planner-navy.vercel.app"><span>Meal Planner (WIP)</span></a>
                 <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/"><span>Refactor Websites</span></a>
                 <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/"><span>Portfolio V1</span></a>
-                <a class="img4" href="https://github.com/marcahudson26"></a>
-                <a class="img5" href="https://github.com/marcahudson26"></a>
+                <a class="img4" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
+                <a class="img5" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
             </div>
         </article>
 
