--- a/index.html
+++ b/index.html
@@ -43,19 +43,37 @@
 
 
             <h3 id="About-me"> About me</h3>
-            <p>Hi im marc up until recently i was a hgv and only recently discovered my love for coding i started my journey to become a front end web developer in october 2022, it has been a rollercoaster and i have learned so much in this time, I decided to pursue my interest in programming with help of family members who are software engineers.
-                Throughout this experience so far i have taken a keen eye for detail. Im currency enrolled in a skills bootcamp into front end web development.I'm fairly new to programming but spend as much of my free time researching JavaScript and HTML/CSS.
-                I really like using css to style pages and make them user friendly im constantly learning new techniques to improve my work, im my projects below you can see my portfolio vol 1 which i look at to just remind me how far i have come in this short time.
-                My ambition is to eventually become a lead  front end engineer,  it will take a lot of time but i will not stop putting the effort and time until i reach my dream, I also have pet projects to experiment with, and pair-programme to try understand how best to work in a team of developers - and gain insight into good programming practices. Being naturally self-motivated, I am constantly setting myself goals - I believe that if a job is worth doing it's worth doing well. I am punctual, hardworking and see every job that I do, through to the end. Having worked in the armed forced, I am disciplined, follow instructions to a tee, and understand the importance of team work. I hope to eventually solve real-world problems using technology, and finally kick-start a career in tech.
-                </p>
+            <p>Hi im marc up until recently i was a hgv and only recently discovered my love for coding i started my
+                journey to become a front end web developer in october 2022, it has been a rollercoaster and i have
+                learned so much in this time, I decided to pursue my interest in programming with help of family members
+                who are software engineers.
+                Throughout this experience so far i have taken a keen eye for detail. Im currency enrolled in a skills
+                bootcamp into front end web development.I'm fairly new to programming but spend as much of my free time
+                researching JavaScript and HTML/CSS.
+                I really like using css to style pages and make them user friendly im constantly learning new techniques
+                to improve my work, in my projects below you can see my portfolio vol 1 which I look at to just remind
+                me how far i have come in this short time.
+                My ambition is to eventually become a lead front end engineer, it will take a lot of time but i will not
+                stop putting the effort and time until i reach my dream, I also have pet projects to experiment with,
+                and pair-programme to try understand how best to work in a team of developers - and gain insight into
+                good programming practices. Being naturally self-motivated,
+                I am constantly setting myself goals - I believe that if a job is worth doing it's worth doing well. I
+                am punctual, hardworking and see every job that I do, through to the end.
+                Having worked in the armed forced, I am disciplined, follow instructions to a tee, and understand the
+                importance of team work.
+                I hope to eventually solve real-world problems using technology, and finally kick-start a career in
+                tech.
+            </p>
         </article>
 
         <article>
             <h3 id="My-projects">My projects :</h3>
             <div class="grid-container">
                 <a class="img1" href="https://meal-planner-navy.vercel.app"><span>Meal Planner (WIP)</span></a>
-                <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/"><span>Refactor Websites</span></a>
-                <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/"><span>Portfolio V1</span></a>
+                <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/"><span>Refactor
+                        Websites</span></a>
+                <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/"><span>Portfolio
+                        V1</span></a>
                 <a class="img4" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
                 <a class="img5" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
             </div>
