html change from lighthouse feedback

--- a/index.html
+++ b/index.html
@@ -69,27 +69,32 @@
         <article>
             <h3 id="My-projects">My projects :</h3>
             <div class="grid-container">
-                <a class="img1" href="https://meal-planner-navy.vercel.app"><span>Just Feast (WIP)</span></a>
-                <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/"><span>Web Refactor
-                        Websites</span></a>
-                <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/"><span>Portfolio
+                <a class="img1" href="https://meal-planner-navy.vercel.app" target="_blank"
+                    title="Just Feast (WIP)"><span>Just Feast (WIP)</span></a>
+                <a class="img2" href="https://marcahudson26.github.io/curly-barnacle-refact/" target="_blank"
+                    title="Website Refactor"><span>Website Refactor
+                    </span></a>
+                <a class="img3" href="https://marcahudson26.github.io/bootcamp-week2-portfolio-site/" target="_blank"
+                    title="Portfolio Vol-1"><span>Portfolio
                         Vol-1
                     </span></a>
-                <a class="img4" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
-                <a class="img5" href="https://github.com/marcahudson26"><span>Checkout my github</span></a>
+                <a class="img4" href="https://github.com/marcahudson26" target="_blank"><span>Checkout my
+                        github</span></a>
+                <a class="img5" href="https://github.com/marcahudson26" target="_blank"><span>Checkout my
+                        github</span></a>
             </div>
         </article>
 
         <article id="C-V">
 
-            <a href="./assets/marc-hudson-cv.pdf">Download my cv</a>
+            <a href="./assets/marc-hudson-cv.pdf" target="_blank">Download my cv</a>
 
         </article>
 
     </main>
     <footer>
-        <article class="flex-footer">
-            <h5 id="Contact-details">Contact details :</h5>
+        <article class="flex-footer" id="Contact-details">
+            
             <ul>
                 <li><a href="https://github.com/marcahudson26">github</a></li>
                 <li><a href="mailto:marchudson2601@gmail.com"> email</a></li>
