added about me section

--- a/index.html
+++ b/index.html
@@ -43,24 +43,30 @@
 
 
             <h3 id="About-me"> About me</h3>
-            <p>Hi im marc up until recently i was a hgv and only recently discovered my love for coding i started my
-                journey to become a front end web developer in october 2022, it has been a rollercoaster and i have
-                learned so much in this time, I decided to pursue my interest in programming with help of family members
-                who are software engineers.</p>
-            <p>Throughout this experience so far i have taken a keen eye for detail. Im currency enrolled in a skills
-                bootcamp into front end web development.I'm fairly new to programming but spend as much of my free time
-                researching JavaScript and HTML/CSS.</p>
-            <p>I really like using css to style pages and make them user friendly im constantly learning new techniques
-                to improve my work, in my projects below you can see my portfolio vol 1 which I look at to just remind
-                me how far i have come in this short time.</p>
-            <p>My ambition is to eventually become a lead front end engineer, it will take a lot of time but i will not
-                stop putting the effort and time until i reach my dream, I also have pet projects to experiment with,
-                and pair-programme to try understand how best to work in a team of developers - and gain insight into
-                good programming practices. Being naturally self-motivated.</p>
-            <p>I'm constantly setting myself goals - I believe that if a job is worth doing it's worth doing well. I
-                am punctual, hardworking and see every job that I do, through to the end.
-                Having worked in the armed forced, I am disciplined, follow instructions to a tee, and understand the
-                importance of team work.</p>
+            <p>Hello, I'm Marc. Up until recently I was a HGV driver, I have recently discovered my love for coding. I
+                started my
+                journey to become a front-end web developer in October 2022. I decided to pursue my interest in
+                programming
+                with help of family members who are software engineers. I have dedicated my spare time to learning these
+                new skills.
+            </p>
+            <p>Throughout this experience so far I have enjoyed paying attention to the small details. I am currently
+                enrolled in a skills
+                bootcamp into front-end web development. I'm fairly new to programming but spend as much of my free time
+                researching JavaScript and HTML/CSS as these particularly interest me.
+            </p>
+            <p>I like using CSS to style pages and make them user friendly. I am constantly learning new techniques
+                to improve my work; in my projects below you can see my portfolio Vol 1 which I look at to just remind
+                me how far I have come in this short time period.
+            </p>
+            <p>My ambition is to eventually become a lead front-end engineer. It will take a lot of time, however, I
+                will not
+                stop putting the effort and time in until I reach my goal. I have pet projects to experiment with as
+                well as
+                pair-programmes to try understand how best to work in a team of developers. This helps me gain insight
+                into
+                good programming practices.
+            </p>
             <p>I hope to eventually solve real-world problems using technology, and finally kick-start a career in
                 tech.
             </p>
@@ -94,7 +100,7 @@
     </main>
     <footer>
         <article class="flex-footer" id="Contact-details">
-            
+
             <ul>
                 <li><a href="https://github.com/marcahudson26">github</a></li>
                 <li><a href="mailto:marchudson2601@gmail.com"> email</a></li>
